--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -14,7 +14,7 @@
 		<h1>Julie Norcross</h1> 
 
 		<section>
-			<h2 id="slogan">Just let me do it.</h2>
+			<h2>Just let me do it.</h2>
 		</section>
 
 		<nav>
